Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,6 +81,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initial_i = 0\n",
+    "ending_i = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
