--- a/index.ipynb
+++ b/index.ipynb
@@ -81,12 +81,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 4)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "initial_i = 0\n",
-    "ending_i = 4"
+    "ending_i = 4\n",
+    "range(initial_i,ending_i)"
    ]
   },
   {
