Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,6 +107,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(initial_i, ending_i + 1):\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
