--- a/index.ipynb
+++ b/index.ipynb
@@ -108,12 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(initial_i, ending_i + 1):\n",
-    "    print()"
+    "    print(i)"
    ]
   },
   {
