--- a/index.ipynb
+++ b/index.ipynb
@@ -400,11 +400,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range"
+    "for i in range(0,6):\n",
+    "    print(i)"
    ]
   },
   {
