--- a/index.ipynb
+++ b/index.ipynb
@@ -400,22 +400,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-13-dd79bec17e61>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-dd79bec17e61>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n",
+      "15\n"
      ]
     }
    ],
    "source": [
     "total=0\n",
     "for i in range(0,6):\n",
-    "    total+=\n",
+    "    total+=i\n",
+    "    print(total)\n",
     "    "
    ]
   },
