Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,27 +400,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "3\n",
-      "6\n",
-      "10\n",
-      "15\n"
+      "75\n"
      ]
     }
    ],
    "source": [
     "total=0\n",
     "for i in range(0,6):\n",
-    "    total+=i\n",
-    "    print(total)\n",
+    "    total+=i*5\n",
+    "print(total)\n",
     "    "
    ]
   },
